@@ -5,12 +5,14 @@ import com.core.backend.dto.comment.CommentDto;
 import com.core.backend.dto.filter.PostFilters;
 import com.core.backend.dto.post.PostCreateUpdateDto;
 import com.core.backend.dto.post.PostDto;
+import com.core.backend.dto.post.PostWithPaginationDto;
 import com.core.backend.dto.mapper.CommentMapper;
 import com.core.backend.dto.mapper.PostMapper;
 import com.core.backend.exception.*;
-import com.core.backend.id.PostTagsId;
+import com.core.backend.id.PostLikeOrDislikeId;
 import com.core.backend.model.*;
 import com.core.backend.repository.*;
+import com.core.backend.sorting.PostSorting;
 import com.core.backend.utilis.Utilis;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
@@ -21,10 +23,9 @@ import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.util.List;
-import java.util.Objects;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
+import java.util.stream.Stream;
 import java.util.stream.StreamSupport;
 
 @Service
@@ -46,61 +47,96 @@ public class PostServiceImpl implements PostService {
     private PostTagRepository postTagRepository;
 
     @Autowired
-    private PostTagsRepository postTagsRepository;
+    private PostCategoryRepository postCategoryRepository;
+
+    @Autowired
+    private PostLikeOrDislikeRepository postLikeOrDislikeRepository;
 
     @Autowired
     private Utilis utilis;
 
     public static final int PAGE_SIZE = 5;
 
-
     @Override
     public List<PostDto> getAllPosts() {
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        User user = userRepository.findByEmail(authentication.getName());
+
         return postRepository.findAllPosts().stream()
-                .map(PostMapper::toPostDto)
-                .collect(Collectors.toList());
+                .map(p -> {
+                    PostLikeOrDislike postLikeOrDislike = getPostLikeOrDislike(p, user);
+                    Boolean isLiked = postLikeOrDislike == null ? null : postLikeOrDislike.isLikes();
+                    return PostMapper.toPostDto(p, isLiked);
+                }).collect(Collectors.toList());
     }
 
     @Override
     public List<PostDto> getAllPostsPagination(Integer page, Sort.Direction sort) {
         page = page == null ? 0 : page;
         Pageable pageableRequest = PageRequest.of(page, PAGE_SIZE, sort, "postId");
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        User user = userRepository.findByEmail(authentication.getName());
+
         return postRepository.findAllPosts(pageableRequest).stream()
-                .map(PostMapper::toPostDto)
-                .collect(Collectors.toList());
+                .map(p -> {
+                    PostLikeOrDislike postLikeOrDislike = getPostLikeOrDislike(p, user);
+                    Boolean isLiked = postLikeOrDislike == null ? null : postLikeOrDislike.isLikes();
+                    return PostMapper.toPostDto(p, isLiked);
+                }).collect(Collectors.toList());
     }
 
     @Override
-    public List<PostDto> getPostsFiltered(PostFilters postFilters) {
+    public PostWithPaginationDto getPostsFiltered(PostFilters postFilters, int page, int postPerPage) {
         List<Post> posts;
-        String cat = postFilters.getCategory();
-        String catGroup = postFilters.getCategoryGroup();
-        Long creatorId = postFilters.getCreatorId();
-        List<String> tagNames = List.of(postFilters.getTagNames());
-
-        if (cat != null)  posts = postRepository.findAllPostsByCategoryName(cat);
-        else posts = postRepository.findAllPosts();
-        if (catGroup != null)   posts = posts.stream().filter(p -> Objects.equals(p.getCategory().getPostCategoryGroup().getDisplayName(), catGroup)).collect(Collectors.toList());
-        if (creatorId != null)  posts = posts.stream().filter(p -> p.getCreator().getUserId() == creatorId).collect(Collectors.toList());
-        if (tagNames.size() > 0) {
-            List<PostTags> postTags = postTagsRepository.findAllByPostTagsIdPostIdIn(posts);
-
-            for (String tag : tagNames){
-                posts = posts.stream().filter(p -> {
-                    boolean contains = false;
-                    for (PostTags postTag : postTags) {
-                        if (postTag.getPostTagsId().getPostId().getPostId() == p.getPostId() &&
-                                postTag.getPostTagsId().getTagName().getTagName().equals(tag)) {
-                            contains = true;
-                            break;
-                        }
-                    }
-                    return contains;
-                }).collect(Collectors.toList());
-            }
+        Date startDate = null, endDate = null;
+        Sort sort = PostSorting.getSortingByPostOrdering(postFilters.getOrderBy());
+        String[] postFiltersTagNames = postFilters.getTagNames();
+        List<String> tagNames = List.of(postFiltersTagNames == null ? new String[0] : postFiltersTagNames);
+        if (postFilters.getMaxPostDaysAge() != null && postFilters.getMaxPostDaysAge() >= 0) {
+            endDate = new Date(System.currentTimeMillis());
+            Calendar cal = Calendar.getInstance();
+            cal.setTime(endDate);
+            cal.add(Calendar.DATE, -postFilters.getMaxPostDaysAge());
+            startDate = cal.getTime();
         }
 
-        return posts.stream().map(PostMapper::toPostDto).collect(Collectors.toList());
+        posts = postRepository.findPostsFiltered(postFilters.getCategoryGroupId()
+                , postFilters.getCategoryId(), postFilters.getCreatorId(), startDate, endDate, sort);
+
+
+        posts = posts.stream().filter(p -> {
+            boolean containsAllTags = true;
+            for(String tagName : tagNames) {
+                if (!p.getPostTags().contains(new PostTag(tagName))) {
+                    containsAllTags = false;
+                    break;
+                }
+            }
+            return containsAllTags;
+        }).collect(Collectors.toList());
+
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        User user = userRepository.findByEmail(authentication.getName());
+
+        int postsToSkip = page * postPerPage;
+
+        Stream<PostDto> filteredPostsStream = posts.stream().map(p -> {
+            PostLikeOrDislike postLikeOrDislike = getPostLikeOrDislike(p, user);
+            Boolean isLiked = postLikeOrDislike == null ? null : postLikeOrDislike.isLikes();
+            return PostMapper.toPostDto(p, isLiked);
+        });
+
+        List<PostDto> collectedPosts = filteredPostsStream
+                .collect(Collectors.toList());
+
+        long totalPostsCount = collectedPosts.size();
+
+        collectedPosts = collectedPosts.stream()
+                .skip(postsToSkip)
+                .limit(postPerPage)
+                .collect(Collectors.toList());
+
+        return new PostWithPaginationDto(collectedPosts, totalPostsCount);
     }
 
     @Override
@@ -108,8 +144,13 @@ public class PostServiceImpl implements PostService {
         long longId;
         longId = utilis.convertId(postId);
         Optional<Post> post = postRepository.findById(longId);
-        if (post.isEmpty()) throw new NoPostException("Post nie istnieje");
-        return PostMapper.toPostDto(post.get());
+        if (post.isEmpty())
+            throw new NoPostException("Post nie istnieje");
+        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
+        User user = userRepository.findByEmail(authentication.getName());
+        PostLikeOrDislike postLikeOrDislike = getPostLikeOrDislike(post.get(), user);
+        Boolean isLiked = postLikeOrDislike == null ? null : postLikeOrDislike.isLikes();
+        return PostMapper.toPostDto(post.get(), isLiked);
     }
 
     @Override
@@ -117,7 +158,8 @@ public class PostServiceImpl implements PostService {
         long longId;
         longId = utilis.convertId(postId);
         Optional<Post> postOptional = postRepository.findById(longId);
-        if (postOptional.isEmpty()) throw new NoPostException();
+        if (postOptional.isEmpty())
+            throw new NoPostException();
         Post post = postOptional.get();
         List<Comment> comments = commentRepository.findAllCommentsByPostId(post.getPostId());
         return comments.stream()
@@ -132,7 +174,8 @@ public class PostServiceImpl implements PostService {
         long longId;
         longId = utilis.convertId(postId);
         Optional<Post> postOptional = postRepository.findById(longId);
-        if (postOptional.isEmpty()) throw new NoPostException();
+        if (postOptional.isEmpty())
+            throw new NoPostException();
         Post post = postOptional.get();
         page = page == null ? 0 : page;
         Pageable pageableRequest = PageRequest.of(page, PAGE_SIZE, sort, "commentId");
@@ -144,43 +187,61 @@ public class PostServiceImpl implements PostService {
     }
 
     @Override
-    public PostCreateUpdateDto addPost(PostCreateUpdateDto postDto, MultipartFile photo) {
+    public PostCreateUpdateDto addPost(PostCreateUpdateDto postDto, MultipartFile photo)
+            throws NoPostCategoryException {
         Post post;
-        boolean isPhotoEmpty = photo.isEmpty();
-        String path ="";
-        postDto.setImageUrl(path);
+        boolean isPhotoEmpty = photo == null || photo.isEmpty();
+        String photoPath = "";
 
+        postDto.setTagNames(postDto.getTagNames().stream()
+                .map(p -> p.toLowerCase(Locale.ROOT))
+                .collect(Collectors.toSet()));
         User user = userRepository.findByEmail(SecurityContextHolder.getContext().getAuthentication().getName());
-        post = PostMapper.toPost(postDto, user);
+        List<PostTag> postTagList = StreamSupport
+                .stream(postTagRepository.findAllById(postDto.getTagNames()).spliterator(), false)
+                .toList();
+        Set<PostTag> postTags = new HashSet<>(postTagList);
+
+        for (String tag : postDto.getTagNames()) {
+            if (!postTags.contains(new PostTag(tag))) {
+                PostTag p = new PostTag(tag);
+                postTagRepository.save(p);
+                postTags.add(p);
+            }
+        }
+        PostCategory postCategory = postCategoryRepository.findByDisplayName(postDto.getCategoryName());
+        if (postCategory == null)
+            throw new NoPostCategoryException("Podana kategoria postu nie istnieje");
+        postCategory.setTotalPosts(postCategory.getTotalPosts() + 1);
+        postCategory.getPostCategoryGroup().setTotalPosts(postCategory.getPostCategoryGroup().getTotalPosts() + 1);
+
+        post = PostMapper.toPost(postDto, user, postCategory, postTags);
+        for (PostTag p : postTags) {
+            post.addPostTag(p);
+        }
         post = postRepository.save(post);
-        if (!isPhotoEmpty)  {
-            path = String.format("post_%d", post.getPostId());
-            post.setImageUrl(path);
+
+        if (!isPhotoEmpty) {
+            photoPath = String.format("post_%d", post.getPostId());
+            post.setImageUrl(photoPath);
             postRepository.save(post);
         }
 
-        Iterable<PostTag> postTags = postTagRepository.findAllById(postDto.getTags().stream()
-                .map(PostTag::getTagName)
-                .collect(Collectors.toList()));
+        if (isPhotoEmpty)
+            return postDto;
 
-        List<PostTag> postTagList = StreamSupport.stream(postTags.spliterator(), false).toList();
-        for (PostTag tag : postDto.getTags()) {
-            if (!postTagList.contains(tag)) postTagRepository.save(tag);
-            postTagsRepository.save(
-                    new PostTags(new PostTagsId(post, tag)));
-        }
-        if (photo.isEmpty())   return postDto;
-
-        fileService.uploadFile(photo, path);
+        fileService.uploadFile(photo, photoPath);
         return postDto;
     }
 
     @Override
-    public void updatePost(String postId, PostCreateUpdateDto postDto, MultipartFile photo) throws NoAccessException, NoPostException, WrongIdException, NoIdException {
+    public void updatePost(String postId, PostCreateUpdateDto postDto, MultipartFile photo)
+            throws NoAccessException, NoPostException, WrongIdException, NoIdException, NoPostCategoryException {
         long longId;
         longId = utilis.convertId(postId);
         Optional<Post> postOpt = postRepository.findById(longId);
-        if (postOpt.isEmpty()) throw new NoPostException("Post nie istnieje");
+        if (postOpt.isEmpty())
+            throw new NoPostException("Post nie istnieje");
         Post post = postOpt.get();
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         if (!Objects.equals(authentication.getName(),
@@ -188,33 +249,56 @@ public class PostServiceImpl implements PostService {
                 authentication.getAuthorities().stream().anyMatch(r -> r.getAuthority().equals("ROLE_USER"))) {
             throw new NoAccessException("Próba edycji nie swojego postu");
         }
-        boolean isPhotoEmpty = photo == null;
-        String path = isPhotoEmpty ? String.format("post_%d", longId) : "";
-
-        post.setCategory(postDto.getCategory());
+        postDto.setTagNames(postDto.getTagNames().stream()
+                .map(p -> p.toLowerCase(Locale.ROOT))
+                .collect(Collectors.toSet()));
+        PostCategory newPostCategory = postCategoryRepository.findByDisplayName(postDto.getCategoryName());
+        if (newPostCategory == null)
+            throw new NoPostCategoryException("Podana kategoria postu nie istnieje");
+        if (!Objects.equals(post.getCategory().getDisplayName(), newPostCategory.getDisplayName())) {
+            PostCategory oldPostCategory = post.getCategory();
+            oldPostCategory.setTotalPosts(oldPostCategory.getTotalPosts() - 1);
+            newPostCategory.setTotalPosts(newPostCategory.getTotalPosts() + 1);
+            if (!Objects.equals(oldPostCategory.getPostCategoryGroup().getDisplayName(), newPostCategory
+                    .getPostCategoryGroup().getDisplayName())) {
+                oldPostCategory.getPostCategoryGroup()
+                        .setTotalPosts(oldPostCategory.getPostCategoryGroup().getTotalPosts() - 1);
+                newPostCategory.getPostCategoryGroup()
+                        .setTotalPosts(newPostCategory.getPostCategoryGroup().getTotalPosts() + 1);
+            }
+        }
+        boolean isPhotoEmpty = photo == null || photo.isEmpty();
+        String path = isPhotoEmpty ? "" : String.format("post_%d", longId);
+        post.setCategory(newPostCategory);
         post.setImageUrl(path);
         post.setMarkdownContent(postDto.getMarkdownContent());
         post.setTitle(postDto.getTitle());
-        postRepository.save(post);
 
-        Iterable<PostTag> postTags = postTagRepository.findAllById(postDto.getTags().stream()
-                .map(PostTag::getTagName)
-                .collect(Collectors.toList()));
+        List<PostTag> newPostTags = StreamSupport
+                .stream(postTagRepository.findAllById(postDto.getTagNames()).spliterator(), false).toList();
 
-        List<PostTag> postTagList = StreamSupport.stream(postTags.spliterator(), false).toList();
-        for (PostTag tag : postDto.getTags()) {
-            if (!postTagList.contains(tag)) postTagRepository.save(tag);
-            postTagsRepository.save(
-                    new PostTags(new PostTagsId(post, tag)));
-        }
-        for (PostTag tag : postTagList) {
-            if (!postDto.getTags().contains(tag))   {
-                postTagsRepository.deleteById(new PostTagsId(post, tag));
+        for (String tag : postDto.getTagNames()) {
+            int id = newPostTags.indexOf(new PostTag(tag));
+            PostTag p = new PostTag(tag);
+            if (id != -1) {
+                p = newPostTags.get(id);
+                postTagRepository.save(p);
+            }
+            if (!post.getPostTags().contains(p)) {
+                postTagRepository.save(p);
+                post.addPostTag(p);
             }
         }
+        Set<PostTag> oldPostTags = new HashSet<>(post.getPostTags());
+        for (PostTag postTag : oldPostTags) {
+            if (!newPostTags.contains(postTag)) {
+                post.deletePostTag(postTag);
+            }
+        }
+        postRepository.save(post);
 
-
-        if (isPhotoEmpty)   return;
+        if (isPhotoEmpty)
+            return;
         fileService.uploadFile(photo, path);
     }
 
@@ -224,42 +308,62 @@ public class PostServiceImpl implements PostService {
         longId = utilis.convertId(postId);
         Optional<Post> post = postRepository.findById(longId);
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (post.isEmpty()) {}
-        else if ((!Objects.equals(authentication.getName(),
+        if (post.isEmpty()) {
+        } else if ((!Objects.equals(authentication.getName(),
                 post.get().getCreator().getEmail())) &&
-                authentication.getAuthorities().stream().anyMatch(r -> r.getAuthority().equals("ROLE_USER"))) throw new NoAccessException("Możesz usunąć tylko swój post");
+                authentication.getAuthorities().stream().anyMatch(r -> r.getAuthority().equals("ROLE_USER")))
+            throw new NoAccessException("Możesz usunąć tylko swój post");
         else {
+            Post postToDelete = post.get();
             String photoToDelete = String.format("post_%s", postId);
-            List<PostTags> postTags = postTagsRepository.findByPostTagsIdPostId(post.get());
-            for (PostTags p : postTags) postTagsRepository.deleteById(p.getPostTagsId());
+            List<PostTag> postTagList = postTagRepository.findPostTagsByPostsPostId(postToDelete.getPostId()).stream()
+                    .toList();
+            Set<PostTag> postTags = new HashSet<>(postTagList);
+            for (PostTag p : postTags)
+                postToDelete.deletePostTag(p);
+            List<PostLikeOrDislikeId> postLikeOrDislikes = postLikeOrDislikeRepository
+                    .findAllByPostId(postToDelete.getPostId())
+                    .stream()
+                    .map(PostLikeOrDislike::getPostLikeOrDislikeId)
+                    .collect(Collectors.toList());
+            postToDelete.getCategory().getPostCategoryGroup()
+                    .setTotalPosts(postToDelete.getCategory().getPostCategoryGroup().getTotalPosts() - 1);
+            postToDelete.getCategory().setTotalPosts(postToDelete.getCategory().getTotalPosts() - 1);
+            postLikeOrDislikeRepository.deleteAllById(postLikeOrDislikes);
             postRepository.deleteById(longId);
             fileService.deleteFile(photoToDelete);
         }
     }
 
     @Override
-    public CommentCreateUpdateDto addComment(String postId, CommentCreateUpdateDto commentCreateUpdateDto) throws NoPostException, WrongIdException, NoIdException {
+    public CommentCreateUpdateDto addComment(String postId, CommentCreateUpdateDto commentCreateUpdateDto)
+            throws NoPostException, WrongIdException, NoIdException {
         long longId;
         longId = utilis.convertId(postId);
         User creator = userRepository.findByEmail(SecurityContextHolder.getContext().getAuthentication().getName());
         Optional<Post> post = postRepository.findById(longId);
-        if (post.isEmpty()) throw new NoPostException("Post nie istnieje");
+        if (post.isEmpty())
+            throw new NoPostException("Post nie istnieje");
         commentRepository.save(CommentMapper.toComment(commentCreateUpdateDto, creator, post.get()));
         return commentCreateUpdateDto;
     }
 
     @Override
-    public void updateComment(String postId, String commentId, CommentCreateUpdateDto commentUpdateDto) throws NoPostException, NoAccessException, WrongIdException, NoIdException, NoCommentException {
+    public void updateComment(String postId, String commentId, CommentCreateUpdateDto commentUpdateDto)
+            throws NoPostException, NoAccessException, WrongIdException, NoIdException, NoCommentException {
         long longPostId, longCommentId;
         longPostId = utilis.convertId(postId);
         longCommentId = utilis.convertId(commentId);
         Optional<Post> post = postRepository.findById(longPostId);
-        if (post.isEmpty()) throw new NoPostException("Post nie istnieje");
+        if (post.isEmpty())
+            throw new NoPostException("Post nie istnieje");
         Optional<Comment> comment = commentRepository.findById(longCommentId);
-        if (comment.isEmpty()) throw new NoCommentException("Komentarz nie istnieje");
+        if (comment.isEmpty())
+            throw new NoCommentException("Komentarz nie istnieje");
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         if (!comment.get().getCreator().getEmail().equals(authentication.getName()) &&
-                authentication.getAuthorities().stream().anyMatch(r -> r.getAuthority().equals("ROLE_USER")))   throw new NoAccessException("Możesz zaktualizować tylko swój komentarz");
+                authentication.getAuthorities().stream().anyMatch(r -> r.getAuthority().equals("ROLE_USER")))
+            throw new NoAccessException("Możesz zaktualizować tylko swój komentarz");
         comment.get().setContent(commentUpdateDto.getContent());
         commentRepository.save(comment.get());
     }
@@ -270,11 +374,13 @@ public class PostServiceImpl implements PostService {
         longId = utilis.convertId(commentId);
         Optional<Comment> comment = commentRepository.findById(longId);
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        if (comment.isEmpty()) { // FIXME CO TU SIĘ DZIEJE?, jeżeli comment NIE JEST pusty to sprawdź czy można usunąć,
-
+        if (comment.isEmpty()) {
         } else if ((!Objects.equals(authentication.getName(),
-                comment.get().getCreator().getEmail())) && authentication.getAuthorities().stream().anyMatch(r -> r.getAuthority().equals("ROLE_USER"))) throw new NoAccessException("Możesz usunąć tylko swój komentarz");
-        else commentRepository.deleteById(longId);
+                comment.get().getCreator().getEmail()))
+                && authentication.getAuthorities().stream().anyMatch(r -> r.getAuthority().equals("ROLE_USER")))
+            throw new NoAccessException("Możesz usunąć tylko swój komentarz");
+        else
+            commentRepository.deleteById(longId);
     }
 
     @Override
@@ -282,11 +388,19 @@ public class PostServiceImpl implements PostService {
         long longId;
         longId = utilis.convertId(postId);
         Optional<Post> post = postRepository.findById(longId);
-        if (post.isEmpty()) throw new NoPostException("Post nie istnieje");
+        if (post.isEmpty())
+            throw new NoPostException("Post nie istnieje");
         String fileName = String.format("post_%d", longId);
         return fileService.downloadFile(fileName);
     }
 
-
+    @Override
+    public PostLikeOrDislike getPostLikeOrDislike(Post post, User user) {
+        if (user == null)
+            return null;
+        PostLikeOrDislikeId postLikeOrDislikeId = new PostLikeOrDislikeId(user, post);
+        Optional<PostLikeOrDislike> postLikeOrDislike = postLikeOrDislikeRepository.findById(postLikeOrDislikeId);
+        return postLikeOrDislike.isEmpty() ? null : postLikeOrDislike.get();
+    }
 
 }
